2017-11-08  Helmut Eller  <eller.helmut@gmail.com>

	* CLReadTable.java: New file.
	(CLReadTable): Moved here from CommonLisp.java
	(SharpPlus): The new readtable entry for #+.

	* CommonLisp.java (features): New. Holds *features*.
	(initLisp): Register and initialize *features*.

2017-11-08  Helmut Eller  <eller.helmut@gmail.com>

	* CommonLisp.java (initLisp): Add bindings for find-symbol,
	multiple-value-list, and nth-value.

2017-11-07  Helmut Eller  <eller.helmut@gmail.com>

	* CommonLisp.java (CLReadTable): New CL specific readtable.
	The package aware interning is done by overriding makeSymbol.
	For the time beeing, the very approximate handling of ':' is also
	done in makeSymbol.
	(createReadTable): Override it and use the new readtable.

2015-04-03  Per Bothner  <per@bothner.com>

	* Lisp2.java (isTrueLisp): New static method.
	(isTrue): Use isTrueLisp.
	* Lisp2Compilation.java (asBooleanValue): New method.
	(isTrueMethod): New constant.

2014-12-22  Per Bothner  <per@bothner.com>

	* OrdinaryLambda.java (rewriteFormals): Set IS_PARAMETER as needed.

2014-02-25  Charles Turner  <chturne@gmail.com>

	* CommonLisp.java: Added funcall, minusp, plusp, flet, labels,
	multiple-value-bind, and floor.

2014-02-08  Charles Turner  <chturne@gmail.com>

	* CommonLisp.java: Added member, apply, complement and eql.

2014-02-08  Charles Turner  <chturne@gmail.com>

	* CommonLisp.java: Added the various c*r procedures, acons, listp,
	numberp, zerop, consp and atom.

2014-02-07  Charles Turner  <chturne@gmail.com>

	* CommonLisp.java: Change NOT to be defined as in Scheme, so that
	it gets picked up as a procedure. Also added first, cdr, rest,
	second, third, nthcdr, nth, 1- and 1+.

2014-02-06  Charles Turner  <chturne@gmail.com>

	* CommonLisp.java: Proof-of-concept start to loading the CL
	primitives from the new primitives.lisp file.

2014-02-05  Charles Turner  <chturne@gmail.com>

	* CommonLisp.java: Expose *package* variable to the CL language.
